# are-they-hiring

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Containerfile.ollama  Containerfile.scraper  Containerfile.web  Implementation.md  Makefile  Project.md  README.md  alembic.ini  podman-compose.dev.yml  podman-compose.prod.yml  podman-compose.test.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
deploy/: render.py
deploy/profiles/: pi.yml
deploy/templates/: are-they-hiring-compose.service.j2  compose.prod.yml.j2  env.j2
deploy/testdata/pi-expected/: are-they-hiring-compose.service  compose.prod.yml  env
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-03-13-are-they-hiring.md
podman/: pod.yml
podman/systemd/: .env.example  are-they-hiring-compose.service  are-they-hiring-db.container  are-they-hiring-ollama.container  are-they-hiring-scraper.container  are-they-hiring-web.container  are-they-hiring.pod
scripts/: dev.sh  embed_classify_experiment.py  embed_classify_results.md  podman-remote.sh  train_prefilter.py  web-entrypoint.sh
src/: config.py
src/classifier/: client.py  prefilter.py
src/db/: models.py  queries.py  session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 1c684c4c080a_initial_schema.py  4b1588f5a0b0_add_progress_tracking_to_scrape_runs.py  86b85e8ce105_add_classified_at_to_job_postings.py
src/scrapers/: anthropic.py  base.py  deepmind.py  meta.py  meta_ai.py  openai_scraper.py  perplexity.py  scheduler.py  xai.py
src/web/: app.py
src/web/static/: app.js  style.css
src/web/templates/: about.html  base.html  day_detail.html  home.html  scrape_status.html
tests/: conftest.py
tests/e2e/: conftest.py  test_day_detail.py  test_home.py  test_scrape_status.py
tests/fixtures/: seed_data.sql
tests/fixtures/html_snapshots/: anthropic_careers.html  deepmind_careers.html  openai_careers.html
tests/integration/: test_anthropic_scraper.py  test_api.py  test_classifier.py  test_db.py  test_deepmind_scraper.py  test_meta_ai_scraper.py  test_meta_scraper.py  test_openai_scraper.py  test_perplexity_scraper.py  test_prefilter.py  test_queries.py  test_scheduler.py  test_scrapers.py  test_ui_states.py  test_xai_scraper.py
tests/unit/: test_profile_schema.py  test_render.py
